Style main webpage to look more rustic

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,35 @@
-h1,
-div {
+body {
+    color: #967645;
     text-align: center;
+    background-color: #26221F;
 }
 
 img {
     width: 1024px;
     height: auto;
     display: block;
-    border: 8px solid #000000;
     margin: 0 auto;
+    border: 8px solid #967645;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 2rem;
 }
 
 ul {
     display: inline-block;
+    margin-top: 0;
+    color: #998a74;
     text-align: left;
+    font-size: 2rem;
+}
+
+a {
+    color: #998a74;
+    font-weight: bold;
+    text-decoration: none;
 }
