--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 img {
-    width: 1024px;
+    width: auto;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -20,7 +20,21 @@ h2 {
     font-size: 2rem;
 }
 
+p {
+    color: #998a74;
+    text-align: left;
+    font-size: 1.5rem;
+}
+
 ul {
+    display: inline-block;
+    margin-top: 0;
+    color: #998a74;
+    text-align: left;
+    font-size: 2rem;
+}
+
+ol {
     display: inline-block;
     margin-top: 0;
     color: #998a74;
@@ -32,4 +46,9 @@ a {
     color: #998a74;
     font-weight: bold;
     text-decoration: none;
+}
+
+.return-home {
+    font-size: 2rem;
+    padding-bottom: 64px;
 }
